<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".presentation.fragments.ProductDialogFragment">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="232dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/product_image_background">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="14dp"
                android:contentDescription="@string/product_image"
                tools:src="@drawable/product_image_placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end|top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/favoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:background="@drawable/product_buttons_background"
                    android:src="@drawable/favorite_icon"
                    android:contentDescription="@string/favorite_button" />

                <ImageView
                    android:id="@+id/dismissButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@drawable/product_buttons_background"
                    android:src="@drawable/dismiss_icon"
                    android:contentDescription="@string/dismiss_button" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            tools:text="@string/product_title_placeholder"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:lineHeight="17dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/product_price_placeholder"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:lineHeight="15dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_and_weight_divider"
                android:includeFontPadding="false"
                android:textColor="@color/product_weight_color"
                android:textFontWeight="400"
                android:lineHeight="15dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/product_weight_placeholder"
                android:includeFontPadding="false"
                android:textColor="@color/product_weight_color"
                android:textFontWeight="400"
                android:lineHeight="15dp"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/product_description_placeholder"
            android:includeFontPadding="false"
            android:textColor="@color/product_description_color"
            android:textFontWeight="400"
            android:lineHeight="16dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/addToBagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingVertical="15dp"
            android:gravity="center"
            android:background="@drawable/add_to_bag_button_background"
            android:text="@string/add_to_bag"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:lineHeight="18dp"
            android:textSize="16sp"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/circleLoader"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>