<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.CatalogFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp" >


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:src="@drawable/back_icon"
            android:clickable="true"
            android:contentDescription="@string/back_button" />


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:includeFontPadding="false"
            android:gravity="center"
            tools:text="@string/title_placeholder"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:lineHeight="22dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitEnd"
            android:src="@drawable/profile_pic_placeholder" />
    </LinearLayout>

</LinearLayout>